# parsing_price_and_title

./: main.py  products.json  pyproject.toml
